style: indent by spaces

--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,7 @@
 	},
 	"javascript": {
 		"formatter": {
+			"indentStyle": "space",
 			"semicolons": "asNeeded",
 			"bracketSpacing": false,
 			"quoteStyle": "single",
